--- a/app/upload.html
+++ b/app/upload.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacts</title>
+    <title>page</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
@@ -209,6 +209,7 @@
                 </div>
             </header>
 
+
             <section class="search page-search" style="background-image: url(images/search-bg.jpg);">
                 <div class="container">
                     <div class="search__inner">
@@ -231,71 +232,84 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>Contact Us</span></li>
+                            <li><span>
+                                    <p>Upload Product</p>
+                                </span></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="contact">
+
+            <section class="upload">
                 <div class="container">
-                    <div class="contact__wrapper">
-                        <div class="contact__head">
-                            Contact With Us
-                        </div>
-                        <div class="contact__inner">
-                            <div class="contact__map">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12086.277851486497!2d-73.97745054371678!3d40.771493193120264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2588fc50eabc7%3A0x145ef5ddf63a434e!2zODEg0YHRgtGA0LjRgiAtINCc0YPQt9C10YPQvCDQvtGEINCd0Y3Rh9GD0YDQsNC7INCl0LjRgdGC0L7RgNC4!5e0!3m2!1sru!2sua!4v1619045305810!5m2!1sru!2sua"
-                                    style="border:0;" allowfullscreen=""
-                                    loading="lazy"></iframe>
+                    <form>
+                        <div class="upload__inner">
+                            <div class="upload__inner-title">
+                                Upload Your item
                             </div>
-                            <div class="contact__box">
-                                <div class="contact__info">
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-map-marker">
-                                            Our Office Address
-                                        </div>
-                                        <div class="contact__info-content">
-                                            PO Box 16122 Collins Street West
-                                            Victoria 8007 Australia
-                                        </div>
-                                    </div>
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-phone">
-                                            Phone
-                                        </div>
-                                        <a class="contact__info-content" href="tel:61383766284">
-                                            +61 3 8376 6284
-                                        </a>
-                                    </div>
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-envelope-o">
-                                            E-mail
-                                        </div>
-                                        <div class="contact__info-content">
-                                            info@foxtar.com
-                                        </div>
-                                    </div>
+                            <div class="upload__inner-content">
+                                <div class="upload-line">
+                                    <label>Select Categories<span>*</span></label>
+                                    <select>
+                                        <option>Select</option>
+                                        <option>Select</option>
+                                        <option>Select</option>
+                                        <option>Select</option>
+                                    </select>
                                 </div>
-                                <div class="contact__form">
-                                    <div class="contact__form-title">
-                                        Drop Us A Message
-                                    </div>
-                                    <form>
-                                        <div class="contact__form-row">
-                                            <input type="text" placeholder="Name*" required>
-                                            <input type="text" placeholder="E-mail*" required>
-                                        </div>
-                                        <textarea placeholder="Message*" required></textarea>
-                                        <button type="submit">Send Message</button>
-                                    </form>
+                                <div class="upload-line">
+                                    <label>Product Name<span>*</span></label>
+                                    <input type="text" placeholder="Enter your product name here ..." required>
+                                </div>
+                                <div class="upload-line">
+                                    <label>Product Description<span>*</span></label>
+                                    <textarea placeholder="<h1> Type your text  here </h1/>" required></textarea>
+                                </div>
+                                <div class="upload-line">
+                                    <label>Upload Main File<span>*</span></label>
+                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                                </div>
+                                <div class="upload-line">
+                                    <label>Upload Screenshots<span>*</span></label>
+                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                                </div>
+                                <div class="upload-line">
+                                    <label>File Included<span>*</span></label>
+                                    <select>
+                                        <option>Select File Type </option>
+                                        <option>Select File Type </option>
+                                        <option>Select File Type </option>
+                                        <option>Select File Type </option>
+                                    </select>
+                                </div>
+                                <div class="upload-line">
+                                    <label>File Dimensions<span>*</span></label>
+                                    <input type="text" placeholder="Enter the item  dimentionss here ..." required>
+                                </div>
+                                <div class="upload-line">
+                                    <label>Item Tags<span>*</span></label>
+                                    <input type="text" placeholder="Enter Tag Here" required>
                                 </div>
                             </div>
+                            <div class="upload__inner-title">
+                                Set Your Price (US$)
+                            </div>
+                            <div class="upload__inner-content">
+                                <div class="upload-line">
+                                    <label>Regular License<span>*</span></label>
+                                    <input type="text" placeholder="$00.00" required>
+                                </div>
+                                <div class="upload-line">
+                                    <label>Extended License<span>*</span></label>
+                                    <input type="text" placeholder="$00.00" required>
+                                </div>
+                                <button type="submit">Submit</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </div>
+            </section>
 
 
         </div>
@@ -390,3 +404,5 @@
 </body>
 
 </html>
+
+
