--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -232,82 +232,101 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>
-                                    <p>Upload Product</p>
-                                </span></li>
+                            <li><span><p>Withdrawals</p></span></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
 
-            <section class="upload">
+            <section class="withdravals">
                 <div class="container">
-                    <form>
-                        <div class="upload__inner">
-                            <div class="upload__inner-title">
-                                Upload Your item
-                            </div>
-                            <div class="upload__inner-content">
-                                <div class="upload-line">
-                                    <label>Select Categories<span>*</span></label>
-                                    <select>
-                                        <option>Select</option>
-                                        <option>Select</option>
-                                        <option>Select</option>
-                                        <option>Select</option>
-                                    </select>
+                    <div class="withdrawals__inner">
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">Withdrawals Earnings</div>
+                                <div class="withdrawals__content">
+                                    <form>
+                                        <div class="withdrawals__form-line">
+                                            <label>Amount to Withdraw ($2000.00 Maximum) <span>*</span></label>
+                                            <input type="text" placeholder="Enter the amount you want to withdraw..."
+                                                required>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Choose your Withdraw Method <span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Your Account Name <span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Confirm Your Password <span>*</span></label>
+                                            <input type="text" placeholder="Select Your Card" required>
+                                        </div>
+                                        <button type="submit">Request Withdrawal</button>
+                                    </form>
                                 </div>
-                                <div class="upload-line">
-                                    <label>Product Name<span>*</span></label>
-                                    <input type="text" placeholder="Enter your product name here ..." required>
-                                </div>
-                                <div class="upload-line">
-                                    <label>Product Description<span>*</span></label>
-                                    <textarea placeholder="<h1> Type your text  here </h1/>" required></textarea>
-                                </div>
-                                <div class="upload-line">
-                                    <label>Upload Main File<span>*</span></label>
-                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
-                                </div>
-                                <div class="upload-line">
-                                    <label>Upload Screenshots<span>*</span></label>
-                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
-                                </div>
-                                <div class="upload-line">
-                                    <label>File Included<span>*</span></label>
-                                    <select>
-                                        <option>Select File Type </option>
-                                        <option>Select File Type </option>
-                                        <option>Select File Type </option>
-                                        <option>Select File Type </option>
-                                    </select>
-                                </div>
-                                <div class="upload-line">
-                                    <label>File Dimensions<span>*</span></label>
-                                    <input type="text" placeholder="Enter the item  dimentionss here ..." required>
-                                </div>
-                                <div class="upload-line">
-                                    <label>Item Tags<span>*</span></label>
-                                    <input type="text" placeholder="Enter Tag Here" required>
-                                </div>
-                            </div>
-                            <div class="upload__inner-title">
-                                Set Your Price (US$)
-                            </div>
-                            <div class="upload__inner-content">
-                                <div class="upload-line">
-                                    <label>Regular License<span>*</span></label>
-                                    <input type="text" placeholder="$00.00" required>
-                                </div>
-                                <div class="upload-line">
-                                    <label>Extended License<span>*</span></label>
-                                    <input type="text" placeholder="$00.00" required>
-                                </div>
-                                <button type="submit">Submit</button>
                             </div>
                         </div>
-                    </form>
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">Withdrawal History</div>
+                                <div class="withdrawals__content">
+                                    <div class="withdrawals__content-items">
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$200 </div>
+                                            <div class="withdrawals__contens-status">Pending</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$100 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$200 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$100 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$200 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$100 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__contens-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__contens-email"> Psdboss@paypal.com</div>
+                                            <div class="withdrawals__contens-price">$200 </div>
+                                            <div class="withdrawals__contens-status withdrawals__contens-paid">Paid</div>                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -404,5 +423,3 @@
 </body>
 
 </html>
-
-
